# SpecialIssue-MT-2025

./: .gitignore  README.md  aux_plot.py  final_data.csv  final_mrs.py  get_metrics.py  grupe.csv  main.py  meeting.rm  mr_kp_ki_kd.py  only_test_data.csv  out.csv  out_sorting_by_total.csv  prepro.py  prueba_tc100.csv  prueba_tc104.csv  prueba_tc106.csv  prueban2.csv  pyproject.toml  signal_metrics.py  tc100.csv  tc1002.csv  tc106.csv  test_data_only.ipynb
